workloads/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress-rule
  namespace: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mythica-gke-public-ip
    kubernetes.io/ingress.allow-http: "false"
  labels:
    tier: web
spec:
  # Map the default requests to the public storage bucket
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: mythica-public-web-content
